# portfolio-optimizer-app

./: .gitignore  Dockerfile  README.md  package.json  pyproject.toml  pytest.ini  req.txt  vite.config.js
py-app/: app.py  flask.py  main.py
py-app/PortOpt/: __init__.py  frontier.py  hull.py  params.py  plot.py  test_np.py
py-app/Server/: __init__.py  app.py  parse.py  server.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/py-app/: formulas.py  frontier.py  hull.py  main.py  plot.py  weights.py
src-tauri/src/: main.rs
src/lib/: DateComp.svelte  InputComp2.svelte  NewDate.svelte  NumInpComp.svelte  SelectManual.svelte  ServeSVG.svelte  fetchHandler.js  frameComp.svelte  selectComp.svelte
src/lib/Comps/: Frame.svelte  Input2.svelte  ManualSelect.svelte  NewDate.svelte  Notify.svelte  NumInput.svelte  Select2.svelte
src/lib/Groups/: About.svelte  Charts.svelte  Config.svelte  Nav.svelte  Review.svelte
src/lib/storeComp/: InputComp.svelte
src/routes/: +layout.svelte  +page.svelte  ChartGroup.svelte  ConfigGroup.svelte
src/routes/about/: +page.svelte
src/routes/charts/: +page.svelte
static/: README.md
tests/: conftest.py  main.py  run.py  test_data_input.py  test_formulas.py  test_hull.py  test_main.py  test_parse.py  test_plot.py  test_simulate.py  test_weights.py
